# websocket_study

./: .gitignore  pyproject.toml
entry/: README.md  app.py  connect4.py  index.html  main.js
quickstart/: client.py  server.py
secure_server/: sec_server.py  secure_client.py
