[tool.poetry]
name = "sock-api"
version = "0.1.0"
description = "a study on implement Websocket using fastAPI"
authors = ["An Vu Nguyen <nguyen.vuan@wisseninfotech.com> <it.avng@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pytest = "^8.2.2"
python-dotenv = "^1.0.1"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
