[tool.poetry]
name = "sock-api"
version = "0.1.0"
description = "a study on implement Websocket using fastAPI"
authors = ["An Vu Nguyen <nguyen.vuan@wisseninfotech.com> <it.avng@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pytest = "^8.2.2"
python-dotenv = "^1.0.1"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]